H3CIPMSJAVA-20180830/src/objects/Parts_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Offered_Parts_Description__c</fullName>
        <formula>Offered_Parts__r.Description__c</formula>
        <label>Offered Parts Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offered_Parts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offered Parts</label>
        <referenceTo>Parts__c</referenceTo>
        <relationshipLabel>Parts Mapping (Offered Parts)</relationshipLabel>
        <relationshipName>Offered_To_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Parts_Description__c</fullName>
        <formula>Request_Parts__r.Description__c</formula>
        <label>Request Parts Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Parts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Parts</label>
        <referenceTo>Parts__c</referenceTo>
        <relationshipLabel>Parts Mapping</relationshipLabel>
        <relationshipName>Request_To_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Parts Mapping</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Parts Mapping Num</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>